--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,16 +4,14 @@
         "es2021": true
     },
     "extends": [
-        "standard"
+        "airbnb-base",
+        "prettier"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    "plugins": ["prettier"],
     "rules": {
     }
 }
