--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "devDependencies": {
     "@fitbit/sdk": "~5.0.2",
     "@fitbit/sdk-cli": "^1.7.3",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "eslint": "^7.29.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0"
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
   },
   "fitbit": {
     "appUUID": "56709a9a-6d1d-4a26-bd52-d02386e2377f",
